[package]
name = "rust-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = "0.7"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP 中间件
tower-http = { version = "0.5", features = ["trace", "timeout"] }
# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 错误处理
anyhow = "1"

[dev-dependencies]
# 测试工具
tower = "0.5"
